--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/appicon_w_48"
+        android:icon="@drawable/ic_launcher"
         android:label="怎麼寄"
         android:theme="@style/AppTheme" >
         <activity
